[metadata]
name = etherunit
version = 0.0.4
author = Yasin Ozel
author_email = me@yozel.co
description = Etherium unit conversation and arithmetic library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yozel/etherunit
project_urls =
    Bug Tracker = https://github.com/yozel/etherunit/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = etherunit
python_requires = >=3.6

[options.package_data]
etherunit = py.typed

